fix mobile landscape

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 98vh;
+    height: fit-content;
 }
 
 .converter {
